@@ -1,4 +1,5 @@
 1.2.2:
+	Fix an imporper delay display because of free'd data access
 	Works with NetBSD-2.0 libpthread
 1.2.1:
 	Fix build problems on Solaris
